Test implement KMS

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -2,9 +2,11 @@
 FROM amazonlinux
 
 RUN yum install python3 -y
+RUN python3 -m pip install pycryptodome
 
+COPY entity .
 COPY gateway .
 COPY service .
 COPY test .
 
-CMD ["python3", "test_nsm.py"]
+CMD ["run_tests.sh"]
