--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -3,7 +3,7 @@
 FROM amazonlinux
 
 RUN yum install python3 -y
-RUN python3 -m pip install pycryptodome
+RUN python3 -m pip install pycryptodome cbor2 pyopenssl
 
 COPY . ./enclave/
 
